--- a/notebooks/Task_2.ipynb
+++ b/notebooks/Task_2.ipynb
@@ -11,10 +11,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8MtNW_ziwUkJ",
-        "outputId": "d65085ad-aef8-460b-caaa-bccac2db0d09"
+        "outputId": "67512a78-7fb6-4459-8a9e-d3dd384bb8cc"
       },
       "id": "8MtNW_ziwUkJ",
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 2,
       "id": "1462d6a8-2f24-4284-83c1-936d2f41d24e",
       "metadata": {
         "id": "1462d6a8-2f24-4284-83c1-936d2f41d24e"
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "8b60457c-c0d5-486f-9114-69846d723d7f",
       "metadata": {
         "id": "8b60457c-c0d5-486f-9114-69846d723d7f"
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "id": "9323aecf-b8ab-4bd4-90ed-31543de71adf",
       "metadata": {
         "id": "9323aecf-b8ab-4bd4-90ed-31543de71adf"
@@ -90,14 +90,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "id": "73da998d-7afe-4f4f-a4e2-2ca34d44f22a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "73da998d-7afe-4f4f-a4e2-2ca34d44f22a",
-        "outputId": "3c8e33e9-d1ea-4660-cd92-2bd21a4bbdb6"
+        "outputId": "dfb5243f-1244-4dbc-8631-5404deca2fe6"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo',\n",
+              "       'StateHoliday', 'SchoolHoliday'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
+      "source": [
+        "train.columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "id": "3beaa530-baed-4bd8-8941-6359fbeb68ad",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3beaa530-baed-4bd8-8941-6359fbeb68ad",
+        "outputId": "461e6df3-e0fb-4cad-ee13-36ddcd62f604"
       },
       "outputs": [
         {
@@ -120,42 +149,13 @@
     {
       "cell_type": "code",
       "execution_count": 7,
-      "id": "3beaa530-baed-4bd8-8941-6359fbeb68ad",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3beaa530-baed-4bd8-8941-6359fbeb68ad",
-        "outputId": "4714a327-a01f-46d1-cb87-816bb59277de"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo',\n",
-              "       'StateHoliday', 'SchoolHoliday'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ],
-      "source": [
-        "train.columns"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
       "id": "59d82877-3c2a-4077-aae7-8f54b0777641",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "59d82877-3c2a-4077-aae7-8f54b0777641",
-        "outputId": "df2f5f85-e163-414c-caf0-a6b2f2bdec6d"
+        "outputId": "c46020b7-d6d7-49b7-bbd8-eea74138c941"
       },
       "outputs": [
         {
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "id": "dc40241a-d997-4774-aa35-89c834bcf23a",
       "metadata": {
         "colab": {
@@ -195,7 +195,7 @@
           "height": 366
         },
         "id": "dc40241a-d997-4774-aa35-89c834bcf23a",
-        "outputId": "61790278-628e-4182-c728-83335e55fdcf"
+        "outputId": "f7e0783c-f831-4689-b3dd-28e74b274f0c"
       },
       "outputs": [
         {
@@ -278,7 +278,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ],
       "source": [
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "id": "bab8249b-b146-4adc-8d11-7ed44e20c0fa",
       "metadata": {
         "id": "bab8249b-b146-4adc-8d11-7ed44e20c0fa"
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "id": "5e2e318d-2624-4901-b8dd-b22465d00652",
       "metadata": {
         "colab": {
@@ -323,7 +323,7 @@
           "height": 313
         },
         "id": "5e2e318d-2624-4901-b8dd-b22465d00652",
-        "outputId": "0d801e99-20f0-4698-b97a-253442c4b60a"
+        "outputId": "c0eecb33-7bb8-4b33-f24c-91ad0696a0b3"
       },
       "outputs": [
         {
@@ -353,7 +353,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-622394c0-ed1b-4c25-a4bc-9b9add507540\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d2f8875a-e139-4970-8f15-b90431cff1f9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -480,7 +480,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-622394c0-ed1b-4c25-a4bc-9b9add507540')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d2f8875a-e139-4970-8f15-b90431cff1f9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -532,12 +532,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-622394c0-ed1b-4c25-a4bc-9b9add507540 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d2f8875a-e139-4970-8f15-b90431cff1f9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-622394c0-ed1b-4c25-a4bc-9b9add507540');\n",
+              "        const element = document.querySelector('#df-d2f8875a-e139-4970-8f15-b90431cff1f9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -557,8 +557,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a2ad617f-dd47-410d-9f16-0634a4235edd\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a2ad617f-dd47-410d-9f16-0634a4235edd')\"\n",
+              "<div id=\"df-7ba94458-c8e4-4245-aeea-8f4ad3bb426c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7ba94458-c8e4-4245-aeea-8f4ad3bb426c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -677,7 +677,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a2ad617f-dd47-410d-9f16-0634a4235edd button');\n",
+              "        document.querySelector('#df-7ba94458-c8e4-4245-aeea-8f4ad3bb426c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -693,7 +693,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ],
       "source": [
@@ -722,14 +722,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "id": "2cc9a099-a3db-4053-982e-78d485171d7a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2cc9a099-a3db-4053-982e-78d485171d7a",
-        "outputId": "0890c8a8-65fb-43f5-a5db-5489245f640f"
+        "outputId": "ddb6cd78-fddf-4361-d61d-f3cfc7f2ce45"
       },
       "outputs": [
         {
@@ -750,7 +750,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
         }
       ],
       "source": [
@@ -771,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "id": "7d18c66e-4e93-4f35-93f2-6a1d897aef56",
       "metadata": {
         "id": "7d18c66e-4e93-4f35-93f2-6a1d897aef56"
@@ -794,7 +794,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "id": "291a2e57-7ec9-46b5-ac3a-399bead7fef9",
       "metadata": {
         "id": "291a2e57-7ec9-46b5-ac3a-399bead7fef9"
@@ -818,7 +818,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "id": "51d135df-c457-4b60-9d2f-209f90cebdc1",
       "metadata": {
         "id": "51d135df-c457-4b60-9d2f-209f90cebdc1"
@@ -832,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "id": "1339ef11-2ed2-4140-a7b5-2189f52db5df",
       "metadata": {
         "colab": {
@@ -840,7 +840,7 @@
           "height": 116
         },
         "id": "1339ef11-2ed2-4140-a7b5-2189f52db5df",
-        "outputId": "947a0e83-909e-452c-d983-fc021b9fcf99"
+        "outputId": "758316ad-e471-41b7-87ec-d204ada7109a"
       },
       "outputs": [
         {
@@ -1269,11 +1269,56 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 15
         }
       ],
       "source": [
         "pipeline.fit(X_train, y_train)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Evaluate the Model**"
+      ],
+      "metadata": {
+        "id": "NI8CzBg76dRu"
+      },
+      "id": "NI8CzBg76dRu"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = pipeline.predict(X_test)\n",
+        "MAE = np.mean(np.abs(y_pred - y_test))\n",
+        "MSE = np.mean((y_pred - y_test) ** 2)\n",
+        "RMSE = np.sqrt(MSE)\n",
+        "\n",
+        "\n",
+        "print(\"Mean Absolute Error:\", MAE)\n",
+        "print(\"Mean Squared Error:\", MSE)\n",
+        "print(\"Root Mean Squared Error:\", RMSE)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GBhJ23LJ82is",
+        "outputId": "eaf0d01e-e904-4869-cb4f-859f487d9700"
+      },
+      "id": "GBhJ23LJ82is",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Absolute Error: 372.35199210728325\n",
+            "Mean Squared Error: 416976.34472013917\n",
+            "Root Mean Squared Error: 645.7370554026919\n"
+          ]
+        }
       ]
     },
     {
@@ -1373,7 +1418,7 @@
         "outputId": "f7c660d9-a9f2-4632-b803-e96ca96d76d3"
       },
       "id": "aa-zZokc7uw9",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1499,7 +1544,7 @@
         "outputId": "0aa8a79b-bf6b-4067-d61e-b7ac329d50cc"
       },
       "id": "oA_pHkAI8XtO",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1526,7 +1571,7 @@
         "outputId": "6ace35cd-2046-4152-d966-3f195e0bedb4"
       },
       "id": "7sAqXI1S8yes",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1561,7 +1606,7 @@
         "outputId": "d240e097-8d10-4395-ca21-1ffd32040add"
       },
       "id": "b90swJKa87Ay",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1613,7 +1658,7 @@
         "id": "XNk2XvM19ZmK"
       },
       "id": "XNk2XvM19ZmK",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1631,7 +1676,7 @@
         "id": "CTUQgW7A9g0b"
       },
       "id": "CTUQgW7A9g0b",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1654,7 +1699,7 @@
         "outputId": "6a9d8c1c-dc6a-4c1d-8f38-b50862e30519"
       },
       "id": "_dE8kbiZ9kvz",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1680,7 +1725,7 @@
         "outputId": "2180880e-909d-4bb3-8c9e-7434e4205e5d"
       },
       "id": "H5PB5HqX9nbX",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1802,7 +1847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "fb20f278-96d5-4c5b-957b-38d1e938a981",
       "metadata": {
         "colab": {
@@ -1850,7 +1895,7 @@
         "outputId": "737fbc85-c65e-407b-9c53-e7fcf9647a42"
       },
       "id": "S669MNIi5Ik9",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
